# vocabulary-app

./: .gitignore  README.md  script.sh
backend/: Cargo.toml  Dockerfile  fly.toml  test_email.rs
backend/migrations/: 20250908155914_create_users_table.down.sql  20250908155914_create_users_table.up.sql  20250908160003_create_user_session_table.down.sql  20250908160003_create_user_session_table.up.sql  20250908160031_create_subscription_table.down.sql  20250908160031_create_subscription_table.up.sql
backend/src/: auth.rs  main.rs  models.rs
frontend/: .gitignore  Dockerfile  README.md  fly.toml  package-lock.json  package.json
frontend/public/: config.js  config.template.js  index.html  manifest.json
frontend/src/: App.css  App.js  Auth.css  ConfirmationModal.css  ConfirmationModal.js  DictionaryPage.js  DirectoryList.js  DirectoryMenu.js  DirectorySelectionModal.css  DirectorySelectionModal.js  Flashcard.js  FlashcardModal.css  FlashcardModal.js  HistoryTable.css  HistoryTable.js  HomePage.js  LoginPage.js  MemorizePage.css  MemorizePage.js  Navigation.js  Notification.js  RegisterPage.js  SentenceExplanation.js  WordForm.js  indexedDB.js  supabase.js
