[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_email"
path = "test_email.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6"
actix-session = { version = "0.7", features = ["redis-rs-session"] }
rusqlite = { version = "0.29", features = ["bundled"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
dotenv = "0.15"
jsonwebtoken = "8"
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
lettre = { version = "0.10", default-features = false, features = ["tokio1-native-tls", "builder", "smtp-transport"] }
rand = "0.8"
regex = "1"
validator = { version = "0.16", features = ["derive"] }
